--- a/classical_testing.ipynb
+++ b/classical_testing.ipynb
@@ -48,16 +48,26 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from IPython.display import Image, display\n",
     "\n",
     "# helper funcs\n",
     "\n",
-    "def display_image(img: np.ndarray, image_name: str, *, dir: str = \"./Test_Images\"):\n",
-    "    \"\"\"expects array input in BGR\"\"\"\n",
-    "    img_vals = (img * 255).astype(int)\n",
-    "    file_path = os.path.join(dir, f\"{image_name}.jpg\")\n",
-    "    cv2.imwrite(file_path, img_vals)\n",
-    "    display(Image(filename=file_path))"
+    "# def display_image(img: np.ndarray, image_name: str, *, dir: str = \"./Test_Images\"):\n",
+    "#     \"\"\"expects array input in BGR\"\"\"\n",
+    "#     img_vals = (img * 255).astype(np.uint8)\n",
+    "#     file_path = os.path.join(dir, f\"{image_name}.jpg\")\n",
+    "#     cv2.imwrite(file_path, img_vals)\n",
+    "#     display(Image(filename=file_path))\n",
+    "\n",
+    "import PIL.Image\n",
+    "\n",
+    "def display_image(img: np.ndarray, _: Optional[str] = None):\n",
+    "    display(PIL.Image.fromarray(cv2.cvtColor((img * 255).astype(np.uint8), cv2.COLOR_BGR2RGB)))\n",
+    "\n",
+    "def show_contours(img: np.ndarray, contours):\n",
+    "    img_with_contours = img.copy()\n",
+    "    for contour in contours:\n",
+    "        cv2.drawContours(img_with_contours, [contour], 0, (0, 1, 0), 2)\n",
+    "    display_image(img_with_contours)"
    ]
   },
   {
