simplify channel merge

--- a/classical_testing.ipynb
+++ b/classical_testing.ipynb
@@ -359,11 +359,8 @@
     "    display_image(\n",
     "        np.where(\n",
     "            np.repeat(np.expand_dims(NGRDI_Orig, 2), 3, axis=2) > 0,\n",
-    "            np.squeeze(np.dstack((\n",
-    "                blue,\n",
-    "                green,\n",
-    "                red,\n",
-    "            ))), np.zeros(blue.shape + (3,))\n",
+    "            cv2.merge([blue, green, red]),\n",
+    "            0\n",
     "        ),\n",
     "        \"temp_ndvi\"\n",
     "    )"
