extra count method testing

--- a/classical_testing.ipynb
+++ b/classical_testing.ipynb
@@ -63,7 +63,7 @@
     "def display_image(img: np.ndarray, _: Optional[str] = None):\n",
     "    display(PIL.Image.fromarray(cv2.cvtColor((img * 255).astype(np.uint8), cv2.COLOR_BGR2RGB)))\n",
     "\n",
-    "def show_contours(img: np.ndarray, contours):\n",
+    "def display_contours(img: np.ndarray, contours):\n",
     "    img_with_contours = img.copy()\n",
     "    for contour in contours:\n",
     "        cv2.drawContours(img_with_contours, [contour], 0, (0, 1, 0), 2)\n",
