use threshold before erosion, instead of for dilation

--- a/count_test_pipeline2.ipynb
+++ b/count_test_pipeline2.ipynb
@@ -109,7 +109,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_contour_eroded = cv2.erode(img_large_contours, np.ones((3, 3), np.uint8), iterations = 1)\n",
+    "img_contour_eroded = cv2.erode(\n",
+    "    np.where(cast(np.ndarray, img_large_contours) > 0, [255], [0]).astype(np.uint8),\n",
+    "    img_large_contours,\n",
+    "    np.ones((3, 3), np.uint8),\n",
+    "    iterations = 1\n",
+    ")\n",
     "\n",
     "display_image(img_contour_eroded)"
    ]
@@ -121,7 +126,7 @@
    "outputs": [],
    "source": [
     "img_eroded_dilated = cv2.dilate(\n",
-    "    np.where(cast(np.ndarray, img_contour_eroded) > 0, [255], [0]).astype(np.uint8),\n",
+    "    img_contour_eroded,\n",
     "    np.ones((5,5), np.uint8),\n",
     "    iterations = 1\n",
     ")\n",
