add complete pipeline

--- a/count_test.ipynb
+++ b/count_test.ipynb
@@ -80,11 +80,9 @@
    "outputs": [],
    "source": [
     "ret, thresh  = cv2.threshold(img_grey, 10, 255, cv2.THRESH_BINARY)\n",
-    "kernel1= np.ones((7,7), np.uint8)\n",
-    "kernel2 = np.ones((5,5), np.uint8)\n",
     "\n",
-    "eroded = cv2.erode(thresh, kernel1, iterations = 1)\n",
-    "dilated = cv2.dilate(eroded, kernel2, iterations = 8)\n",
+    "eroded = cv2.erode(thresh, np.ones((4,4), np.uint8), iterations = 2)\n",
+    "dilated = cv2.dilate(eroded, np.ones((3,3), np.uint8), iterations = 8)\n",
     "\n",
     "display_image(dilated)"
    ]
@@ -95,9 +93,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "edged = cv2.Canny(img_grey, 30, 200)\n",
+    "# edged = cv2.Canny(img_grey, 30, 200)\n",
     "\n",
-    "display_image(edged)"
+    "# display_image(edged)"
    ]
   },
   {
@@ -106,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "contours, _ = cv2.findContours(edged, cv2.RETR_TREE, cv2.CHAIN_APPROX_NONE)\n",
+    "contours, _ = cv2.findContours(dilated, cv2.RETR_TREE, cv2.CHAIN_APPROX_NONE)\n",
     "\n",
     "col_grey_img = cv2.cvtColor(img_grey, cv2.COLOR_GRAY2RGB)\n",
     "\n",
@@ -208,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
