fill and reduce perimeter filter

--- a/count_test_pipeline.ipynb
+++ b/count_test_pipeline.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FILENAME = \"Test_Images/Test_Image_3.JPG\"\n",
+    "FILENAME = \"Test_Images/Test_Image_6.JPG\"\n",
     "IMAGE_BITS = 8\n",
     "\n",
     "red_channel = 1\n",
@@ -51,10 +51,10 @@
     "def display_image(img: np.ndarray, _: Optional[str] = None):\n",
     "    display(PIL.Image.fromarray(img))\n",
     "\n",
-    "def display_contours(img: np.ndarray, contours, *, colour_rgb: tuple[int, int, int] = (0, 255, 0)):\n",
+    "def display_contours(img: np.ndarray, contours, *, colour_rgb: tuple[int, int, int] = (0, 255, 0), thickness: int = 2):\n",
     "    img_with_contours = img.copy()\n",
     "    for contour in contours:\n",
-    "        cv2.drawContours(img_with_contours, [contour], 0, colour_rgb, 2)\n",
+    "        cv2.drawContours(img_with_contours, [contour], 0, colour_rgb, thickness)\n",
     "    display_image(img_with_contours)"
    ]
   },
@@ -297,13 +297,13 @@
     "    # if area < 600: continue\n",
     "    \n",
     "    perimeter = cv2.arcLength(contour, True)\n",
-    "    if perimeter < 40: continue\n",
+    "    if perimeter < 10: continue\n",
     "\n",
     "    contours_filtered.append(contour)\n",
     "\n",
     "print(len(contours_filtered))\n",
     "display_contours(img_masked_grey_col, contours_filtered)\n",
-    "display_contours(img_rgb, contours_filtered, colour_rgb=(0, 0, 255))"
+    "display_contours(img_rgb, contours_filtered, colour_rgb=(0, 0, 255), thickness=-1)"
    ]
   }
  ],
