remove unused imports from notebooks

--- a/Classical_Counting/chunking.ipynb
+++ b/Classical_Counting/chunking.ipynb
@@ -7,18 +7,7 @@
    "outputs": [],
    "source": [
     "# Importing necessary libraries\n",
-    "import geopandas as gpd\n",
-    "import rasterio.mask\n",
-    "import fiona\n",
-    "import os\n",
     "import numpy as np\n",
-    "import shapefile\n",
-    "import rasterstats\n",
-    "import matplotlib.pyplot as plt\n",
-    "import statistics\n",
-    "import pandas as pd\n",
-    "import rasterio\n",
-    "import time\n",
     "import cv2\n",
     "import math"
    ]
@@ -29,16 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import cast, Optional\n",
-    "\n",
-    "# Importing necessary programs from the libraries\n",
-    "from rasterio.plot import show\n",
-    "from rasterio.transform import from_origin\n",
-    "from rasterio.crs import CRS\n",
-    "from rasterio import features\n",
-    "from rasterstats import zonal_stats\n",
-    "from matplotlib.colors import ListedColormap\n",
-    "from matplotlib import pyplot as plt"
+    "from typing import cast, Optional"
    ]
   },
   {
